--- a/templates/AWS-DockerSwarm-CloudFormation-202005.yaml
+++ b/templates/AWS-DockerSwarm-CloudFormation-202005.yaml
@@ -30,7 +30,7 @@ Parameters:
     ConstraintDescription: >-
       Quick Start bucket name can include numbers, lowercase letters, uppercase
       letters, and hyphens (-). It cannot start or end with a hyphen (-).
-    Default: 'waltersdockerswarm'
+    Default: 'mydockerswarm'
     Description: >-
       S3 bucket name for the Quick Start assets. Quick Start bucket name can
       include numbers, lowercase letters, uppercase letters, and hyphens (-). It
@@ -41,7 +41,7 @@ Parameters:
     AllowedPattern: '^[0-9a-zA-Z-/]*$'
     ConstraintDescription: >-
       Can include numbers, lowercase letters, uppercase letters, hyphens (-), and forward slash (/).
-    Default: 'swarm-join-tokens/'
+    Default: 'swarm-init-data/'
     Description: >-
       S3 key prefix where assets are located should end withforward slash (/).
     Type: String
